<resources>
    <string name="app_name">WayForLife</string>
    <string name="enter_otp_hint">Enter OTP</string>
    <string name="btn_signup">Sign Up</string>
    <string name="detecting_otp_text">Auto Detecting the OTP</string>
    <string name="autodetecting_message">(Enter the OTP below in case if we fail to detect SMS automatically)</string>
    <string name="enter_otp_message">Enter OTP</string>
    <string name="resend_otp_message">Resend OTP</string>
    <string name="number_verified_message">Phone Number Verified</string>
    <string name="email_hint">Email</string>
    <string name="password_reset_link">Send password reset link</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="feed">Feed</string>
    <string name="events">Events</string>
    <string name="notifications">Notifications</string>
    <string name="donate">Donate</string>
    <string name="request_blood">Request Blood</string>
    <string name="about_us">About Us</string>
    <string name="follow_us">Follow Us</string>
    <string name="others">Others</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_maps">Map</string>
    <string name="click_here_to_choose_an_image">Click here to choose an image</string>
    <string name="enter_the_description_of_problem">Enter the description of problem</string>
    <string name="title">Title</string>
    <string name="feedFragmentTag">feedFragment</string>
    <string name="homeMapFragmentTag">homeMapFragment</string>
    <string name="addPostDialogFragmentTag">addPostDialogFragment</string>
    <string name="xyzProblemFragmentTag">xyzProblemFragment</string>
    <string name="enter_the_title_name">Enter the title name</string>
    <string name="write_your_post_here">Write your post here</string>
    <string name="addPollDialogFragment">addPollDialogFragment</string>
    <string name="detailsWithCommentDialogFragment">detailsWithCommentDialogFragment</string>
    <string name="eventFragmentTag">eventFragment</string>
    <string name="eventDesriptionDialogFragment">eventDescriptionDialogFragment</string>
    <string name="notificationFragment">notificationFragment</string>
    <string name="addNotificationDialogFragment">addNotificationDialogFragment</string>
    <string name="editProfileFragmentTag">editProfileFragment</string>
    <string name="verificationDialogFragmentTag">verificationDialogFragment</string>
    <string name="welcomeFragmentTag">welcomeFragmentTag</string>
    <string name="loginAndSignUpFragmentTag">loginAndSignUpFragmentTag</string>
    <string name="loginFragmentTag">loginFragmentTag</string>
    <string name="signUpFragmentTag">signUpFragmentTag</string>
    <string name="passwordHint">Password</string>
    <string name="loginButtonText">LOGIN</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="verifying_message">Sit back &amp; relax! while we verify your mobile number</string>
    <string name="profilePhotoDialogFragment">profilePhotoDialogFragment</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="profile">Profile</string>


</resources>
