<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/wayForLifeImageView"
            android:layout_width="140sp"
            android:layout_height="140sp"
            android:scaleType="fitXY"
            android:layout_marginTop="20sp"
            android:src="@drawable/way_for_life_logo"
            android:layout_centerHorizontal="true"/>

        <RelativeLayout
            android:layout_marginTop="20sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_below="@id/wayForLifeImageView">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifying_message"
                android:layout_centerHorizontal="true"
                android:gravity="center_horizontal"
                android:textColor="@color/md_black_1000"
                android:textSize="17sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autodetecting_message"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/textView"
                android:layout_marginTop="10sp"
                android:gravity="center_horizontal"
                android:textColor="@color/md_black_1000"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textView2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30sp"/>

            <EditText
                android:id="@+id/enterOtpEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/progressBar"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20sp"
                android:focusable="true"
                android:hint="@string/enter_otp_message"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/enterOtpEditText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="20sp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/resendOtpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40sp"
                    android:textColor="@color/md_white_1000"
                    android:padding="8sp"
                    android:textStyle="bold"
                    android:text="@string/resend_otp_message"
                    android:background="@drawable/button_gradient_round_shape"
                    />

                <Button
                    android:layout_marginStart="30sp"
                    android:id="@+id/signUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/md_white_1000"
                    android:padding="8sp"
                    android:textStyle="bold"
                    android:background="@drawable/button_gradient_round_shape"
                    android:text="@string/btn_signup"
                    />

            </LinearLayout>


        </RelativeLayout>


    </RelativeLayout>

</ScrollView>